tests-build/tests/fail/macros_type_mismatch.stderr
error[E0308]: mismatched types
 --> tests/fail/macros_type_mismatch.rs:5:5
  |
5 |     Ok(())
  |     ^^^^^^ expected `()`, found `Result<(), _>`
  |
  = note: expected unit type `()`
                  found enum `Result<(), _>`

error[E0308]: mismatched types
  --> tests/fail/macros_type_mismatch.rs:10:12
   |
10 |     return Ok(());
   |            ^^^^^^ expected `()`, found `Result<(), _>`
   |
   = note: expected unit type `()`
                   found enum `Result<(), _>`

error[E0308]: mismatched types
  --> tests/fail/macros_type_mismatch.rs:14:46
   |
14 |   async fn extra_semicolon() -> Result<(), ()> {
   |  ______________________________________________^
15 | |     Ok(());
   | |           - help: remove this semicolon to return this value
16 | | }
   | |_^ expected `Result<(), ()>`, found `()`
   |
   = note:   expected enum `Result<(), ()>`
           found unit type `()`

error[E0308]: mismatched types
  --> tests/fail/macros_type_mismatch.rs:23:12
   |
21 | #[tokio::main]
   |               - help: try adding a return type: `-> i32`
22 | async fn issue_4635() {
23 |     return 1;
   |            ^ expected `()`, found integer

error[E0308]: mismatched types
  --> tests/fail/macros_type_mismatch.rs:28:64
   |
28 |   async fn extra_semicolon_with_try_operator() -> Result<(), ()> {
   |  ________________________________________________________________^
29 | |     Ok(())?;
30 | |     Ok(());
   | |           - help: remove this semicolon to return this value
31 | | }
   | |_^ expected `Result<(), ()>`, found `()`
   |
   = note:   expected enum `Result<(), ()>`
           found unit type `()`
